# docx_table_parser

./: .gitignore  Cargo.toml  api.http  dbg.json
axum_server/: Cargo.toml  api.http
axum_server/src/: error.rs  main.rs
axum_server/src/database/: db.rs
dioxus_app/: Cargo.toml
src/: main.rs  model.rs  write_to_db.rs
src/sql/: DROP_DONT_USE.sql  init.sql  izb.sql  izb_template.session.sql  nodes.sql
src/sql/queryes/: all.sql  has_nest.sql
