[package]
name = "docx_table_parser"
version = "0.1.0"
edition = "2021"

[workspace]

members = ["axum_server"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
docx-rs = "0.4"

serde_json = "1"
serde = { version = "1", features = ["derive"] }

tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }


uuid = { version = "1", features = ["serde", "v4"] }

dotenvy = "0.15"

strum = "0.25"
strum_macros = "0.25"

[[bin]]
name = "docx_parser"
path = "src/main.rs"

[[bin]]
name = "db_writer"
path = "src/write_to_db.rs"
