[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

axum = { version = "0.6", features = ["macros"] }

sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "uuid"] }

uuid = { version = "1", features = ["serde"] }

dotenvy = "0.15"
