[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

axum = { version = "0.6", features = ["macros"] }
tower-http = { version = "0.4.0", features = ["cors"] }

sqlx = { version = "0.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }

uuid = { version = "1", features = ["serde", "v4"] }

dotenvy = "0.15"
local-ip-address = "0.5"
